# aether

./: LICENSE
aether-discord/: Cargo.toml  README.md  config.example.toml
aether-discord/.github/workflows/: ci.yml
aether-discord/src/: config.rs  main.rs
aether-discord/src/commands/: fun.rs  general.rs  mod.rs  moderation.rs  pterodactyl.rs  utility.rs
aether-discord/src/handlers/: event.rs  mod.rs
whatsapp/: README-main.md  config.example.json  package.json
whatsapp/src/: config.ts  index.ts
whatsapp/src/commands/: ai.ts  downloader.ts  general.ts  moderation.ts  pterodactyl.ts  utility.ts
whatsapp/src/handlers/: message.ts
whatsapp/src/types/: context.ts
whatsapp/src/utils/: helpers.ts  logger.ts
