[package]
name = "aether-discord"
version = "1.0.0"
edition = "2021"
authors = ["Aetherix-ops"]
description = "A powerful Discord bot built with Rust"
license = "MIT"
repository = "https://github.com/Aetherix-ops/aether-discord"

[[bin]]
name = "aether"
path = "src/main.rs"

[dependencies]
# Discord framework
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "model", "cache"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (for Pterodactyl API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config file
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = "0.4"
rand = "0.8"
dotenv = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
